<resources>
    <string name="app_name">Note</string>
    <string name="add_notes">Add Notes</string>
    <string name="edit_notes">Edit Notes</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="my_notes">My Notes</string>
    <string name="pick_color">Pick Color</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="date">Date</string>

    ///dialog delete
    <string name="delete_title_dialog">Delete Note</string>
    <string name="delete_message_dialog">Are you sure you want to permanently delete this note?</string>
    <string name="delete_dialog">DELETE</string>
    <string name="cancel_dialog">CANCEL</string>
</resources>