<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddNoteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/layoutAppBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_sub"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/add_notes"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                style="@style/Widget.MaterialComponents.Toolbar.Primary" />

        </com.google.android.material.appbar.AppBarLayout>

        <RadioGroup
            android:id="@+id/color_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:checkedButton="@id/color1"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutAppBar">

            <RadioButton
                android:id="@+id/color1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="1.3"
                android:scaleY="1.3"
                app:buttonTint="@color/color1" />

            <RadioButton
                android:id="@+id/color2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="1.3"
                android:scaleY="1.3"
                app:buttonTint="@color/color2" />

            <RadioButton
                android:id="@+id/color3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="1.3"
                android:scaleY="1.3"
                app:buttonTint="@color/color3" />

            <RadioButton
                android:id="@+id/color4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="1.3"
                android:scaleY="1.3"
                app:buttonTint="@color/color4" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="24dp"
            android:text="@string/pick_color"
            app:layout_constraintStart_toEndOf="@id/color_group"
            app:layout_constraintTop_toBottomOf="@+id/layoutAppBar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/title"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/color_group">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionGo"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/content_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/content"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_done_24"
            app:tint="@android:color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>